src/clincoded/static/scss/clincoded/modules/_curator.scss
/* ... */
.viewer-titles {
    h1 {
        display: inline-block;
        margin-bottom: 10px;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        max-width: 100%;
    }

    h2 {
        margin-top: 0;
        font-size: 1.3rem;
        text-overflow: ellipsis;
        overflow: hidden;
    }

    .pmid-association-header {
        padding: 2px 0;
    }

    .variant-association-header {
        padding-left: 15px;

        .term-name {
            font-weight: 400;
        }

        .term-value {
            word-break: break-all;
            word-wrap: break-word;
        }
    }
}

.submit-titles {
    margin-bottom: -40px;

    h1 {
        max-width: 90%;
    }

    a {
        margin: 0 0 55px 10px;
    }
}

.title-ellipsis {
    overflow: hidden;
    display: inline-block;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 100%;
    vertical-align: bottom;

    a {
        border-bottom: 1px dotted #337ab7;
        cursor: pointer;

        &:hover {
            text-decoration: none;
        }
    }
}

.title-ellipsis-short {
    max-width: 91%;

    @media screen and (min-width: $screen-sm-min) {
        max-width: 89%;
    }
}

.title-ellipsis-shorter {
    max-width: 80%;

    @media screen and (min-width: $screen-sm-min) {
        max-width: 77%;
    }
}

.dotted {
    border-bottom: 1px dotted #000;
}

.curation-submit {
    margin-bottom: 20px;

    @media screen and (min-width: $screen-sm-min) {
        margin-bottom: 40px;
    }
}

.no-entry {
    color: #c0c0c0;
}

.disabled-gray {
    color: $gray-light;
}

.btn-individual-submit {
    width: 100%;
}

.input-note-below {
    margin-top: -20px;
    margin-bottom: 40px;
}

.input-note-below-no-bottom {
    margin-top: -20px;
}

.input-note-top {
    margin-top: 20px;
    margin-bottom: -5px;
}

.orphanet-copy {
    margin-top: -15px;

    input[type=button] {
        margin-left: -3px;
    }
}

.demographics-copy,
.methods-copy {
    margin-bottom: 15px;

    input[type=button] {
        margin-left: -3px;
    }
}

.btn-copy {
    background-color: #5bc0de;
    border-color: darken(#5bc0de, 5%);
    color: #fff;

    &:active, &:focus, &:hover {
        background-color: darken(#5bc0de, 10%);
        border-color: darken(darken(#5bc0de, 5%), 12%);
        color: #fff;
    }

    &:active {
        background-image: none;
    }
}

.form-row-helper {
    input[type=checkbox] {
        margin-top: 11px;
    }

    .hug-top {
        margin-top: -20px;
        padding-bottom: 20px;
    }

    .no-resize {
        resize: none;
        overflow-x: hidden;
    }
}

.variant-interpretation {
    input[type=checkbox] {
        margin-top: 11px;
    }

    .section-complete-bar {
        margin: 0 -15px 0 -15px;
        padding-top: 3px;
        padding-bottom: 9px;
        border-left: 0;
        border-right: 0;
        border-radius: 0;
    }
}

.palette-not-curated {
    color: #909090;
}

// Variant Header Styles
.variant-header {
    margin-top: 2px;
    padding: 5px 0;
    background-color: #c0c0c0;

    h2 {
        margin: 0;
        font-size: 1.4rem;
        font-weight: bold;
        text-align: center;
    }

    p {
        margin-bottom: 0;
        text-align: center;
    }

    .btn {
        position: relative;
        margin: 5px 0;
        width: 100%;

        i {
            position: absolute;
            top: 3px;
            right: 3px;
            font-size: 1rem;
        }
    }

    .assessed {
        padding-right: 15px;
    }
}

// Display inline icon for proband. Change @extend to change icon site-wide.
.icon-proband {
    @extend .icon-user-md;
    margin-left: 3px;
    margin-right: 3px;
    color: #ce1d1d;
    font-size: 1.1em !important; // To make its size relative to the surrounding text.
}

.icon-proband-white {
    @extend .icon-proband;
    color: #fff;
}
/* ... */

